Fix: "Copy to Collection" window doesn't fit on small screens (1024x600)

BUG: 283361
FIXED-IN: 2.8